Show Details Page

--- a/ShowApp/ShowApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/ShowApp/ShowApp.WebUI/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ShowComment - Comment your shows</title>
+    <title>@ViewData["Title"]  -ShowComment</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
