--- a/ShowApp/ShowApp.WebUI/Views/Home/Index.cshtml
+++ b/ShowApp/ShowApp.WebUI/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
         {
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="~/img/shows/@item.Image" alt=""></a>
+                    <a asp-controller="Show" asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top" src="~/img/shows/@item.Image" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">@item.Name</a>
+                            <a  asp-controller="Show" asp-action="Details" asp-route-id="@item.Id">@item.Name</a>
                         </h4>
                         <h6>@item.Year</h6>
                         <small>Category :
@@ -37,7 +37,7 @@
                         <p class="card-text">@item.Description</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Details</a>
+                        <a asp-controller="Show" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
                     </div>
                 </div>
             </div>
