--- a/ShowApp/ShowApp.WebUI/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/ShowApp/ShowApp.WebUI/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -4,6 +4,6 @@
 <div class="list-group">
     @foreach (var item in Model)
     {
-        <a href="#" class="list-group-item">@item.Name</a>
+        <a asp-action="List" class="list-group-item">@item.Name</a>
     }
 </div>
