--- a/ShowApp/ShowApp.WebUI/Views/Shared/_Layout.cshtml
+++ b/ShowApp/ShowApp.WebUI/Views/Shared/_Layout.cshtml
@@ -29,20 +29,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">
                             Anasayfa
-                            <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" asp-controller="About" asp-action="Index">About</a>
                     </li>
                 </ul>
             </div>
