--- a/ShowApp/ShowApp.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ShowApp/ShowApp.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using ShowApp.Entity
 @using ShowApp.WebUI.Areas.Admin.ViewModels
+@using ShowApp.Data.Concrete.EfCore.Identity
+@using ShowApp.WebUI.Areas.Admin.Models
+@using Microsoft.AspNetCore.Identity
+@addTagHelper ShowApp.WebUI.Infastructure.*,ShowApp.WebUI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
