--- a/ShowApp/ShowApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShowApp/ShowApp.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ShowApp.Entity
 @using ShowApp.WebUI.ViewModels
+@using ShowApp.WebUI.Models
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
