--- a/ShowApp/ShowApp.WebUI/Areas/Admin/Views/UserRole/Index.cshtml
+++ b/ShowApp/ShowApp.WebUI/Areas/Admin/Views/UserRole/Index.cshtml
@@ -8,6 +8,10 @@
     </div>
 </div>
 <div class="row">
+    @if(TempData["message"] !=null)
+    {
+        <div class="alert alert-success">@TempData["message"]</div>
+    }
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <table class="table table-striped table-bordered table-hover">
