--- a/ShowApp/ShowApp.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ShowApp/ShowApp.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ShowApp.Entity
 @using ShowApp.WebUI.Areas.Admin.ViewModels
+@using ShowApp.WebUI.Models
 @using ShowApp.Data.Concrete.EfCore.Identity
 @using ShowApp.WebUI.Areas.Admin.Models
 @using Microsoft.AspNetCore.Identity
