--- a/ShowApp/ShowApp.WebUI/Areas/Admin/Views/User/Add.cshtml
+++ b/ShowApp/ShowApp.WebUI/Areas/Admin/Views/User/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterModel
+﻿@model ShowApp.WebUI.Areas.Admin.Models.RegisterModel
 @{
     ViewData["Title"] = "Add User";
 }
@@ -20,7 +20,7 @@
                     <input class="form-control" asp-for="Password" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Image">Image</label>
+                    <label >Image</label>
                     <input  name="file" id="file" class="form-control" type="file">
                 </div>
                 <input type="submit" value="Add" class="btn btn-success" />
