user-role menu element eklendi

--- a/ShowApp/ShowApp.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShowApp/ShowApp.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -64,6 +64,9 @@
                     <li>
                         <a asp-controller="User" asp-action="List"><i class="fa fa-bar-chart-o"></i>Users</a>
                     </li>
+                    <li>
+                        <a asp-controller="UserRole" asp-action="Index"><i class="fa fa-bar-chart-o"></i>Users</a>
+                    </li>
                 </ul>
             </div>
 
